kube-webapp/kubernetes/pod-mysql.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysqldb
spec:
  containers:
  - image: mysql:5.7.24
    name: mysql
    args:
      - "--ignore-db-dir=lost+found"
    resources:
      requests:
        memory: "1Gi"
        cpu: "250m"
      limits:
        memory: "2Gi"
        cpu: "500m"
    volumeMounts:
    - name: mysql-data
      mountPath: /var/lib/mysql
    ports:
    - containerPort: 3306
      protocol: TCP
  volumes:
  - name: mysql-data
    persistentVolumeClaim:
      claimName: mysql-pvc
