kube-webapp/kubernetes/ingress.yml
# Ingress 

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alphashop
spec:
  rules:
  - host: soundapp.it
    http:
      paths:
      - path: /webapp/*
        backend:
          serviceName: nodesrv-nodeport
          servicePort: 80
      - path: /*
        backend:
          serviceName: webapp-nodeport
          servicePort: 80
